--- a/style.css
+++ b/style.css
@@ -138,11 +138,9 @@
   }
 
   .logo_area{
-    width: 80%;
-    height: 10%;
-
+    width: 58%;
+    height: 5%;
     display: flex;
-    justify-content: center;
     align-items: center;
 
     font-size: 2rem;
@@ -167,8 +165,9 @@
   }
 
   .area_links{
-    width: 60%;
+    width: 45%;
     height: 100%;
+    padding-left: 10%;
 
     display: flex;
     flex-direction: column;
@@ -193,7 +192,13 @@
 
   display: flex;
   flex-direction: column;
-  background-color: aqua;
+  border-top: 2px solid rgb(64, 64, 64);
+  border-left:  2px solid rgb(64, 64, 64);
+  border-bottom: 2px solid #eeeae2;
+  border-right: 2px solid #eeeae2;
+
+  background-color: rgb(198, 198, 198);
+
 
   align-items: center;
 }
@@ -203,9 +208,10 @@
   height: 5%;
 
   display: inline-flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   align-items: center;
-  background-color: red;
+  justify-content: space-between;
+  background-color:rgb(198, 198, 198);
 
 }
 
@@ -216,12 +222,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: grey;
   margin-right: 3px;
+
+  background-color: lightgray;
+  border-top: 1px solid rgb(239, 239, 239);
+  border-left: 1px solid rgb(239, 239, 239);
+  border-right: 1px solid rgb(64, 64, 64);
+  border-bottom: 1px solid rgb(64, 64, 64);
+}
+
+.if_head_texto{
+  margin-left: 3PX;
 }
 
 #if_x{
-  font-size: 0.5rem;
+  font-size: 0.8rem;
+  color: black;
+}
+#if_head_texto{
+  font-size: 0.8rem;
+  color: black;
 }
 
 .if_content{
@@ -236,32 +256,49 @@
   background-position: center center;
   background-size: cover;
   
-  animation: if_content_background infinite 1s;
+  animation: if_content_background infinite 0.5s;
   background-image: url(bk_index/1.jpeg);
+  border-top: 2px solid rgb(64, 64, 64);
+    border-left:  2px solid rgb(64, 64, 64);
+    border-bottom: 2px solid #eeeae2;
+    border-right: 2px solid #eeeae2;
 }
 
-.d_img{
-  height: 140%;
+#d_img{
+  height: 100%;
 }
+
 
 @keyframes if_content_background {
   0%{
     background-image: url(bk_index/1.jpeg);
   }
+  10%{
+    background-image: url(bk_index/5.jpeg);
+  }
   20%{
+    background-image: url(bk_index/7.jpeg);
+  }
+  30%{
     background-image: url(bk_index/2.jpeg);
   }
   40%{
+    background-image: url(bk_index/9.jpeg);
+  }
+  50%{
     background-image: url(bk_index/3.jpeg);
   }
   60%{
+    background-image: url(bk_index/8.jpeg);
+  }
+  70%{
     background-image: url(bk_index/4.jpeg);
   }
   80%{
-    background-image: url(bk_index/5.jpeg);
+    background-image: url(bk_index/6.jpeg);
   }
   90%{
-    background-image: url(bk_index/6.jpeg);
+    background-image: url(bk_index/10.jpeg);
   }
 
 }
